# micro-blossom

./: .gitignore  .scalafmt.conf  Dockerfile  Makefile  README.md  build.sbt
artifact/: Makefile  figure_8_decoding_latency.py  figure_9a_improvement.py  table_4_resource_usage.py  test_tty.py
artifact/resource/: run.py
benchmark/: frequency_explorer.py  micro_util.py  print_graph_info.py  requirements.txt  slurm_compile_code.py  vivado_builder.py
benchmark/behavior/count_bandwidth/: layer_fusion_d9.txt  no_offloading_d9.txt  plot.py  pre_match_d9.txt  prepare.py  run.py
benchmark/behavior/offloading_rate/: data_p0.0005.txt  data_p0.001.txt  data_p0.002.txt  data_p0.005.txt  data_p0.01.txt  offloading_rate.gp  run.py
benchmark/behavior/offloading_rate_deprecated/: data_p0.0005.txt  data_p0.001.txt  data_p0.002.txt  offloading_rate.gp  run.py
benchmark/behavior/offloading_rate_hardware/: layer_fusion_d11.txt  layer_fusion_d13.txt  layer_fusion_d15.txt  layer_fusion_d3.txt  layer_fusion_d5.txt  layer_fusion_d7.txt  layer_fusion_d9.txt  layer_fusion_p0.0001.txt  layer_fusion_p0.0002.txt  layer_fusion_p0.0005.txt  layer_fusion_p0.001.txt  layer_fusion_p0.0015.txt  layer_fusion_p0.002.txt  layer_fusion_p0.005.txt  layer_fusion_p0.01.txt  no_offloading_d11.txt  no_offloading_d13.txt  no_offloading_d15.txt  no_offloading_d3.txt  no_offloading_d5.txt  no_offloading_d7.txt  no_offloading_d9.txt  plot.py  plot_with_d.py  plot_with_p.py  pre_match_d11.txt  pre_match_d13.txt  pre_match_d15.txt  pre_match_d3.txt  pre_match_d5.txt  pre_match_d7.txt  pre_match_d9.txt  pre_match_p0.0001.txt  pre_match_p0.0002.txt  pre_match_p0.0005.txt  pre_match_p0.001.txt  pre_match_p0.0015.txt  pre_match_p0.002.txt  pre_match_p0.005.txt  pre_match_p0.01.txt  (+4 more)
benchmark/behavior/offloading_rate_layer_fusion/: data_p0.0005.txt  data_p0.001.txt  data_p0.0015.txt  data_p0.002.txt  data_p0.005.txt  data_p0.01.txt  offloading_rate_layer_fusion.gp  run.py
benchmark/behavior/offloading_rate_pre_match/: data_p0.0005.txt  data_p0.0015.txt  offloading_rate_pre_match.gp  run.py
benchmark/behavior/offloading_rate_virtual/: data_p0.0005.txt  data_p0.001.txt  data_p0.002.txt  data_p0.005.txt  data_p0.01.txt  offloading_rate_virtual.gp  prepare.py  run.py
benchmark/behavior/offloading_rate_virtual_deprecated/: data_p0.001.txt  data_p0.005.txt  run.py
benchmark/behavior/tests/: README.md  run.py
benchmark/frequency/: README.md
benchmark/hardware/axi4_bus_clock_frequency/: README.md
benchmark/hardware/bram_speed/: README.md  data.txt  plot.py  prepare.py  run.py
benchmark/hardware/circuit_level_frequency_vs_stages_injection/: .gitignore  README.md  run.py
benchmark/hardware/circuit_level_offloaded_speed/: README.md  prepare.py  run.py
benchmark/hardware/code_capacity_offloaded_speed/: README.md  prepare.py  run.py
benchmark/hardware/decoding_speed/: README.md  circuit_level_common.py  d_9_p_0.001_batch.txt  d_9_p_0.001_fusion.txt  d_9_p_0.001_no_offloading.txt  example.py  plot_circuit_level_compare.py  run.py
benchmark/hardware/frequency_optimization/: plot.py
benchmark/hardware/tests/: README.md  run.py
benchmark/verilated/offloading_rate/: .gitignore  looper_batch.py  looper_batch_p0.0005.txt  looper_batch_p0.001.txt  looper_batch_p0.0015.txt  looper_batch_p0.002.txt  looper_batch_p0.005.txt  looper_batch_p0.01.txt  looper_fusion.py  looper_fusion_p0.0005.txt  looper_fusion_p0.001.txt  looper_fusion_p0.0015.txt  looper_fusion_p0.002.txt  (+3 more)
hw/: README.md  build.sbt  build.sc
project/: plugins.sbt
resources/graphs/: README.md  example_code_capacity_d3.json  example_code_capacity_d5.json  example_code_capacity_planar_d3.json  example_code_capacity_planar_d5.json  example_code_capacity_planar_d7.json  example_code_capacity_rotated_d3.json  example_code_capacity_rotated_d5.json  example_code_capacity_rotated_d7.json  example_phenomenological_rotated_d3.json  example_phenomenological_rotated_d5.json  example_phenomenological_rotated_d7.json  example_repetition_code.json  schema.json  schema_single.json  schema_single.rs  schema_single.sc
resources/syndromes/: README.md
resources/transfromed_graphs/: generate.py
src/cpu/blossom/: Cargo.toml  Makefile  build.rs
src/cpu/blossom-nostd/: Cargo.toml  build.rs
src/cpu/blossom-nostd/src/: blossom_tracker.rs  dual_driver_tracked.rs  dual_module_commander.rs  dual_module_stackless.rs  heap.rs  instruction.rs  interface.rs  latency_benchmarker.rs  layer_fusion.rs  lib.rs  primal_module_embedded.rs  primal_nodes.rs  util.rs
src/cpu/blossom-nostd/src/benchmark/: dual_module_counter.rs  mod.rs  primal_simple_match.rs
src/cpu/blossom-nostd/src/heapless/: binary_heap.rs  mod.rs  vec.rs
src/cpu/blossom-nostd/src/nonmax/: LICENSE-MIT  mod.rs
src/cpu/blossom/src/: cli.rs  dual_module_adaptor.rs  dual_module_axi4.rs  dual_module_comb.rs  dual_module_comb_edge.rs  dual_module_comb_offloading.rs  dual_module_comb_vertex.rs  dual_module_looper.rs  dual_module_rtl.rs  dual_module_scala.rs  example_codes.rs  lib.rs  main.rs  mwpm_solver.rs  mwpm_solver_macro.rs  primal_module_embedded.rs  primal_module_embedded_adaptor.rs  resources.rs  simulation_tcp_client.rs  simulation_tcp_host.rs  transform_syndromes.rs  util.rs
src/cpu/embedded/: Cargo.toml  Makefile  Makefile.toml  README.md  build.rs  memory.x  rustc-ice-2024-06-21T04_16_39-1787574.txt
src/cpu/embedded/.cargo/: config
src/cpu/embedded/src/: binding.rs  defects_reader.rs  dual_driver.rs  hls.rs  lib.rs  main.rs  riscv_driver.rs  util.rs
src/cpu/embedded/src/mains/: benchmark_axi4_dual.rs  benchmark_decoding.rs  benchmark_primal_dual.rs  benchmark_primal_simple_match.rs  benchmark_reset_speed.rs  hello_world.rs  test_axi4_timer.rs  test_bram.rs  test_get_time.rs  test_led.rs  test_micro_blossom.rs
src/cpu/hls/: Cargo.toml  Makefile
src/cpu/hls/src/: lib.rs  main.rs
src/fpga/: counter.v
src/fpga/tests/rust-example-A72/: Cargo.toml
src/fpga/tests/rust-example-A72/src/: lib.rs
src/interface/: Makefile  interface.h
tutorial/: book.toml
tutorial/src/: developer-notes.md
(+461 files in other folders)
