[package]
name = "micro-blossom-nostd"
version = "0.0.0"
authors = ["Yue Wu <wuyue16pku@gmail.com>"]
edition = "2018"
license = "MIT"
description = "hardware MWPM decoder"
readme = "README.md"
keywords = ["QEC", "quantum-computing", "error-correction", "visualization"]
categories = ["science"]
# default-run = "micro_blossom_nostd"

# see https://doc.rust-lang.org/1.39.0/cargo/reference/manifest.html#the-documentation-field-optional
[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "micro_blossom_nostd"
path = "src/lib.rs"
crate-type = ["lib"]

# [[bin]]
# name = "micro_blossom"
# path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# to enable a feature, use `--features xxx`
default = ["std"]
u16_index = []
i16_weight = []
std = ["derivative"]
obstacle_potentially_outdated = []
unsafe_unwrap = [] # still keeps the normal boundary check and possibly panic
dangerous_unwrap = [
    "unsafe_unwrap",
] # remove every possible way of panic, but may lead to undefined behavior
hls = [
    "dangerous_unwrap",
] # for compiling at rust 1.52.0 nightly and remove recursive logic

[dependencies]
derivative = { version = "2.2.0", optional = true }
panic-halt = "0.2.0"
cfg-if = "1.0.0"
num-derive = "0.4.1"
num-traits = { version = "0.2.17", default-features = false }

[profile.release]
opt-level = 3
debug = true            # symbols are nice and they don't increase the size on Flash
lto = true              # better optimizations and smaller binary size
overflow-checks = false
