[package]
name = "embedded-blossom"
version = "0.1.0"
authors = ["Yue Wu <wuyue16pku@gmail.com>"]
edition = "2021"
license = "MIT"
description = "hardware MWPM decoder"
readme = "README.md"
keywords = ["QEC", "quantum-computing", "error-correction", "embedded"]
categories = ["science"]
default-run = "embedded_blossom"

# rustup target add --toolchain nightly riscv32i-unknown-none-elf
# cargo install cargo-make
# cargo build --release
# cargo make objcopy

# see https://doc.rust-lang.org/1.39.0/cargo/reference/manifest.html#the-documentation-field-optional
[badges]
maintenance = { status = "actively-developed" }

# [lib]
# name = "embedded_blossom"
# path = "src/lib.rs"
# crate-type = ["lib"]

[[bin]]
name = "embedded_blossom"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
heapless = "0.7.16"

# see https://craigjb.com/2020/01/22/ecp5/
[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations and smaller binary size
