[package]
name = "embedded-blossom"
version = "0.1.0"
authors = ["Yue Wu <wuyue16pku@gmail.com>"]
edition = "2021"
license = "MIT"
description = "hardware MWPM decoder"
readme = "README.md"
keywords = ["QEC", "quantum-computing", "error-correction", "embedded"]
categories = ["science"]
default-run = "embedded_blossom"

# rustup target add --toolchain nightly riscv32i-unknown-none-elf
# make

# see https://doc.rust-lang.org/1.39.0/cargo/reference/manifest.html#the-documentation-field-optional
[badges]
maintenance = { status = "actively-developed" }

# [lib]
# name = "embedded_blossom"
# path = "src/lib.rs"
# crate-type = ["lib"]

[[bin]]
name = "embedded_blossom"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
heapless = "0.7.16"
micro-blossom-nostd = { path = "../blossom-nostd", version = "0.0.0", features = [
    "u16_index",
] }
konst = "0.3.6"
num = { version = "0.4.1", default-features = false }
num-derive = "0.4.1"
num-traits = { version = "0.2.17", default-features = false }

# see https://craigjb.com/2020/01/22/ecp5/
[profile.release]
opt-level = 3
codegen-units = 1       # better optimizations
debug = true            # symbols are nice and they don't increase the size on Flash
lto = true              # better optimizations and smaller binary size
overflow-checks = false
