[package]
name = "hls-blossom"
version = "0.1.0"
authors = ["Yue Wu <wuyue16pku@gmail.com>"]
edition = "2021"
license = "MIT"
description = "hardware MWPM decoder with HLS"
readme = "README.md"
keywords = [
    "QEC",
    "quantum-computing",
    "error-correction",
    "high-level synthesis",
]
categories = ["science"]
default-run = "hls_blossom"
rust-version = "1.69.0" # need an older version to disable the new opaque pointer feature of LLVM 17
# see https://llvm.org/docs/OpaquePointers.html
# LLVM 14: ...
# LLVM 15: Opaque pointers are enabled by default. Typed pointers are still supported.
# LLVM 16: Opaque pointers are enabled by default. Typed pointers are supported on a best-effort basis only and not tested.
# LLVM 17: Only opaque pointers are supported. Typed pointers are not supported.

# rustup target add --toolchain nightly riscv32i-unknown-none-elf
# make

# see https://doc.rust-lang.org/1.39.0/cargo/reference/manifest.html#the-documentation-field-optional
[badges]
maintenance = { status = "actively-developed" }

# [lib]
# name = "hls_blossom"
# path = "src/lib.rs"
# crate-type = ["lib"]

[[bin]]
name = "hls_blossom"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
micro-blossom-nostd = { path = "../blossom-nostd", version = "0.0.0", features = [
    # "u16_index",  # it saves 2x memory but becomes 1.5x slower because of type conversion instructions 
    "unsafe_unwrap",
] }
konst = "0.3.6"
num = { version = "0.4.1", default-features = false }
num-derive = "0.4.1"
num-traits = { version = "0.2.17", default-features = false }
