[package]
name = "hls-blossom"
version = "0.1.0"
authors = ["Yue Wu <wuyue16pku@gmail.com>"]
edition = "2018"
license = "MIT"
description = "hardware MWPM decoder with HLS"
readme = "README.md"
keywords = [
    "QEC",
    "quantum-computing",
    "error-correction",
    "high-level synthesis",
]
categories = ["science"]
# default-run = "hls_blossom"

# rustup target add --toolchain nightly riscv32i-unknown-none-elf
# make

# see https://doc.rust-lang.org/1.39.0/cargo/reference/manifest.html#the-documentation-field-optional
[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "hls_blossom"
path = "src/lib.rs"
crate-type = ["lib"]

# [[bin]]
# name = "hls_blossom"
# path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# panic-halt = "0.2.0"
micro-blossom-nostd = { path = "../blossom-nostd", version = "0.0.0", default-features = false, features = [
    "u16_index",        # it saves 2x memory but becomes 1.5x slower because of type conversion instructions 
    "dangerous_unwrap",
    "rustc152",
] }

# see https://craigjb.com/2020/01/22/ecp5/
[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1       # better optimizations
lto = true              # better optimizations and smaller binary size
overflow-checks = false
